--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+body {
+  background-image: url("imgs/background.jpg");
+  background-size: cover;
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -13,11 +18,15 @@
 
 #left-panel,
 #right-panel {
-  background-color: red;
+  background-color: rgb(216, 30, 30);
   border-radius: 10px;
   border: 1px solid black;
   width: 14%;
   height: 50%;
+}
+
+#right-panel {
+  display: flex;
 }
 
 header {
@@ -26,9 +35,11 @@ header {
 }
 
 footer {
+  margin-top: 1.5rem;
   display: flex;
-
-  width: 100%;
+  width: 75%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .blue-light {
@@ -56,7 +67,7 @@ footer {
 
 .red-light,
 .red-bar {
-  background-color: rgb(177, 1, 1);
+  background-color: red;
 }
 
 .yellow-light {
@@ -69,6 +80,26 @@ footer {
 
 .blue-bar {
   background-color: blue;
+  height: 6px;
+  width: 20%;
+  border: 1px solid black;
+  border-radius: 40%;
+}
+
+.red-bar {
+  height: 6px;
+  width: 20%;
+  border: 1px solid black;
+  border-radius: 40%;
+}
+
+#bottom-screen {
+  width: 60%;
+  border: 1px solid black;
+  background-color: rgb(112, 167, 112);
+  padding: 3rem;
+  border-radius: 10%;
+  margin-top: 1rem;
 }
 
 #screen {
@@ -79,13 +110,39 @@ footer {
   margin: auto;
 }
 
+#right-screen {
+  width: 75%;
+  padding: 5rem;
+  background-color: rgb(112, 167, 112);
+  border-radius: 10px;
+  margin: auto;
+}
+
 #action-button {
-  padding: 1.5rem;
+  padding: 1rem;
   background-color: black;
   border: 1px solid black;
   border-radius: 100px;
 }
 
-.red-bar,
-.blue-bar {
+.arrows {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.up-arrow {
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 30px solid black;
+}
+
+.down-arrow {
+  width: 0;
+  height: 0;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-top: 30px solid black;
 }
